--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,7 @@ __pycache__/
 # 특정 폴더 무시
 06_opencv/img*
 08_opencv/img/101_ObjectCategories*
-09_opencv/src/faces*
-09_opencv/src/faces/all_face.xml
+09_opencv/src/faces/
 
 # 특정 파일 무시
 filebrowser.db  
